crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_exempt_type_checking_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
exempt_type_checking_2.py:5:20: TC003 (typing-only-standard-library-import) [*] Move standard library import `typing.Final` into a type-checking block
  |
3 | from __future__ import annotations
4 |
5 | from typing import Final, TYPE_CHECKING
  |                    ^^^^^ TC003 (typing-only-standard-library-import)
6 |
7 | Const: Final[dict] = {}
  |
  = help: Move into type-checking block

ℹ Unsafe fix
2 2 | 
3 3 | from __future__ import annotations
4 4 | 
5   |-from typing import Final, TYPE_CHECKING
  5 |+from typing import TYPE_CHECKING
  6 |+
  7 |+if TYPE_CHECKING:
  8 |+    from typing import Final
6 9 | 
7 10 | Const: Final[dict] = {}
