crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_init_var.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
init_var.py:6:21: TC003 (typing-only-standard-library-import) [*] Move standard library import `pathlib.Path` into a type-checking block
  |
5 | from dataclasses import FrozenInstanceError, InitVar, dataclass
6 | from pathlib import Path
  |                     ^^^^ TC003 (typing-only-standard-library-import)
  |
  = help: Move into type-checking block

ℹ Unsafe fix
3  3  | from __future__ import annotations
4  4  | 
5  5  | from dataclasses import FrozenInstanceError, InitVar, dataclass
6     |-from pathlib import Path
   6  |+from typing import TYPE_CHECKING
   7  |+
   8  |+if TYPE_CHECKING:
   9  |+    from pathlib import Path
7  10 | 
8  11 | 
9  12 | @dataclass
