crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-standard-library-import_runtime_evaluated_base_classes_3.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
runtime_evaluated_base_classes_3.py:5:18: TC003 (typing-only-standard-library-import) [*] Move standard library import `uuid.UUID` into a type-checking block
  |
3 | import datetime
4 | import pathlib
5 | from uuid import UUID  # TC003
  |                  ^^^^ TC003 (typing-only-standard-library-import)
6 |
7 | import pydantic
  |
  = help: Move into type-checking block

ℹ Unsafe fix
2  2  | 
3  3  | import datetime
4  4  | import pathlib
5     |-from uuid import UUID  # TC003
6  5  | 
7  6  | import pydantic
8  7  | from pydantic import BaseModel
   8  |+from typing import TYPE_CHECKING
   9  |+
   10 |+if TYPE_CHECKING:
   11 |+    from uuid import UUID
9  12 | 
10 13 | 
11 14 | class A(pydantic.BaseModel):
